# igscrape

./: .gitignore  README.md  pyproject.toml
db/: accounts.db
examples/: capture_replay_spike.py  test_downloaders.py  test_post_by_shortcode.py  test_profile_graphql_replay.py  test_search.py  test_user_profile.py  test_user_timeline.py
igscrape/: __init__.py  account.py  accounts_pool.py  browser_session.py  cli.py  db.py  downloaders.py  exceptions.py  exporter.py  jsonl_store.py  logger.py  models.py  pagination.py  parsers.py  response.py  scraper.py  stop_conditions.py  utils.py  worker.py  worker_pool.py
tests/: test_flatten.py  test_jsonl_store.py  test_models_save.py  test_pagination.py  test_profile_api.py  test_response_ingest.py  test_stop_conditions.py  test_streaming.py  test_user_timeline.py
