[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "igscrape"
version = "0.1.0"
description = "Instagram scraping library with account management."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Pinned as a pair: the Camoufox browser binary speaks a specific Playwright
    # protocol. Camoufox declares only an unbounded "playwright" dep, so without
    # this pin uv resolves the latest Playwright (e.g. 1.61), whose new_context
    # protocol the 0.4.11 browser rejects ("...viewport.isMobile... not in scheme").
    "playwright==1.58.0",
    "camoufox==0.4.11",
    "aiosqlite>=0.19.0",
    "aiohttp>=3.9.0",
    "click>=8.0.0",
    "tabulate>=0.9.0",
    "loguru>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "polars>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
igscrape = "igscrape.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["igscrape*"]
